--- a/src/sklearn/sklearn_digits.ipynb
+++ b/src/sklearn/sklearn_digits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "dict_keys(['data', 'target', 'frame', 'feature_names', 'target_names', 'images', 'DESCR'])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,20 +175,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.60      0.96      0.74        27\n",
-      "           1       0.45      0.46      0.46        41\n",
-      "           2       0.68      0.66      0.67        41\n",
-      "           3       0.29      0.71      0.42        14\n",
-      "           4       0.86      0.62      0.72        52\n",
-      "           5       0.39      0.65      0.49        17\n",
-      "           6       0.89      0.89      0.89        28\n",
-      "           7       0.21      0.30      0.25        23\n",
-      "           8       0.63      0.38      0.47        71\n",
-      "           9       0.66      0.46      0.54        46\n",
+      "           0       0.98      1.00      0.99        42\n",
+      "           1       0.81      0.81      0.81        42\n",
+      "           2       0.82      0.79      0.80        42\n",
+      "           3       0.91      0.79      0.85        39\n",
+      "           4       0.95      0.83      0.89        42\n",
+      "           5       0.96      0.90      0.93        30\n",
+      "           6       0.93      0.84      0.88        31\n",
+      "           7       0.82      0.96      0.89        28\n",
+      "           8       0.65      0.88      0.75        32\n",
+      "           9       0.78      0.78      0.78        32\n",
       "\n",
-      "    accuracy                           0.57       360\n",
-      "   macro avg       0.57      0.61      0.56       360\n",
-      "weighted avg       0.62      0.57      0.57       360\n",
+      "    accuracy                           0.86       360\n",
+      "   macro avg       0.86      0.86      0.86       360\n",
+      "weighted avg       0.87      0.86      0.86       360\n",
       "\n"
      ]
     }
@@ -199,7 +199,7 @@
     "decision_tree.fit(X_train_minmax, y_train)\n",
     "\n",
     "# (5) 예측하기\n",
-    "y_pred = decision_tree.predict(X_test)\n",
+    "y_pred = decision_tree.predict(X_test_minmax)\n",
     "\n",
     "\n",
     "\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,19 +226,19 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.98      1.00      0.99        42\n",
-      "           1       1.00      0.49      0.66        85\n",
-      "           2       0.75      1.00      0.86        30\n",
-      "           3       0.82      0.97      0.89        29\n",
-      "           4       1.00      0.84      0.91        44\n",
-      "           5       0.93      0.93      0.93        28\n",
-      "           6       0.93      1.00      0.96        26\n",
-      "           7       0.79      1.00      0.88        26\n",
-      "           8       0.42      0.86      0.56        21\n",
-      "           9       0.78      0.86      0.82        29\n",
+      "           1       1.00      0.93      0.97        45\n",
+      "           2       1.00      1.00      1.00        40\n",
+      "           3       1.00      1.00      1.00        34\n",
+      "           4       1.00      0.93      0.96        40\n",
+      "           5       0.96      0.90      0.93        30\n",
+      "           6       0.96      1.00      0.98        27\n",
+      "           7       0.97      0.94      0.96        34\n",
+      "           8       0.84      1.00      0.91        36\n",
+      "           9       0.94      0.94      0.94        32\n",
       "\n",
-      "    accuracy                           0.83       360\n",
-      "   macro avg       0.84      0.89      0.85       360\n",
-      "weighted avg       0.88      0.83      0.83       360\n",
+      "    accuracy                           0.96       360\n",
+      "   macro avg       0.96      0.96      0.96       360\n",
+      "weighted avg       0.97      0.96      0.96       360\n",
       "\n"
      ]
     }
@@ -252,7 +252,7 @@
     "RandomForest.fit(X_train_minmax, y_train)\n",
     "\n",
     "# (5) 예측하기\n",
-    "y_pred = RandomForest.predict(X_test)\n",
+    "y_pred = RandomForest.predict(X_test_minmax)\n",
     "\n",
     "\n",
     "\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,19 +280,19 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.98      1.00      0.99        42\n",
-      "           1       1.00      0.49      0.66        85\n",
-      "           2       0.75      1.00      0.86        30\n",
-      "           3       0.82      0.97      0.89        29\n",
-      "           4       1.00      0.84      0.91        44\n",
-      "           5       0.93      0.93      0.93        28\n",
-      "           6       0.93      1.00      0.96        26\n",
-      "           7       0.79      1.00      0.88        26\n",
-      "           8       0.42      0.86      0.56        21\n",
-      "           9       0.78      0.86      0.82        29\n",
+      "           1       1.00      0.93      0.97        45\n",
+      "           2       1.00      1.00      1.00        40\n",
+      "           3       1.00      1.00      1.00        34\n",
+      "           4       1.00      0.93      0.96        40\n",
+      "           5       0.96      0.90      0.93        30\n",
+      "           6       0.96      1.00      0.98        27\n",
+      "           7       0.97      0.94      0.96        34\n",
+      "           8       0.84      1.00      0.91        36\n",
+      "           9       0.94      0.94      0.94        32\n",
       "\n",
-      "    accuracy                           0.83       360\n",
-      "   macro avg       0.84      0.89      0.85       360\n",
-      "weighted avg       0.88      0.83      0.83       360\n",
+      "    accuracy                           0.96       360\n",
+      "   macro avg       0.96      0.96      0.96       360\n",
+      "weighted avg       0.97      0.96      0.96       360\n",
       "\n"
      ]
     }
@@ -305,7 +305,7 @@
     "clf.fit(X_train_minmax, y_train)\n",
     "\n",
     "# (5) 예측하기\n",
-    "y_pred = RandomForest.predict(X_test)\n",
+    "y_pred = clf.predict(X_test_minmax)\n",
     "\n",
     "\n",
     "# (6) 평가\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,20 +330,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        43\n",
+      "           0       1.00      0.98      0.99        43\n",
       "           1       0.95      0.88      0.91        42\n",
-      "           2       1.00      0.95      0.97        40\n",
+      "           2       1.00      1.00      1.00        40\n",
       "           3       0.89      0.91      0.90        34\n",
       "           4       1.00      0.95      0.97        37\n",
-      "           5       0.93      1.00      0.97        28\n",
-      "           6       0.96      0.93      0.95        28\n",
-      "           7       0.97      0.97      0.97        33\n",
-      "           8       0.84      0.95      0.89        43\n",
+      "           5       0.90      1.00      0.95        28\n",
+      "           6       0.96      0.96      0.96        28\n",
+      "           7       0.94      0.97      0.96        33\n",
+      "           8       0.89      0.93      0.91        43\n",
       "           9       0.90      0.88      0.89        32\n",
       "\n",
       "    accuracy                           0.94       360\n",
-      "   macro avg       0.94      0.94      0.94       360\n",
-      "weighted avg       0.94      0.94      0.94       360\n",
+      "   macro avg       0.94      0.95      0.94       360\n",
+      "weighted avg       0.95      0.94      0.94       360\n",
       "\n"
      ]
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +432,13 @@
     "\n",
     "# 평가\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "손글씨는 전체적으로 다중분류여서 "
    ]
   },
   {
